made font size smaller to prevent wrap in Autres service in French

--- a/src/sass/_menus.scss
+++ b/src/sass/_menus.scss
@@ -24,6 +24,7 @@
             padding: 0;
             a {
                 color: #fff;
+                font-size: 14px;
                 padding: 1em;
                 text-align: center;
                 display: block;
